--- a/index.html
+++ b/index.html
@@ -135,16 +135,21 @@
             <p>Contacts</p>
           </div>
         </div>
-        <div class="page1-content">
+        <div class="page1-content"
+        id="pc1">
           <h1>We Design</h1>
         </div>
-        <div class="page1-content">
+        <div class="page1-content"
+        id="pc2">
           <h1>Unique</h1>
         </div>
-        <div class="page1-content">
-          <h1>Web/Graphic</h1>
+        <div class="page1-content" id="pc3">
+          <h2>Web</h2>
+          <h2>/</h2>
+          <h2>graphics</h2>
         </div>
-        <div class="page1-content">
+        <div class="page1-content"
+        id="pc4">
           <h1>Experience</h1>
         </div>
       </div>
