--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="page1-content" id="pc3">
           <h2>Web</h2>
           <h2>/</h2>
-          <h2>graphics</h2>
+          <h2>graphic</h2>
         </div>
         <div class="page1-content" id="pc4">
           <h1>Experience</h1>
