--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <video loop src="Video/Obys-Showreel-2022 (1).mp4"></video>
         </div>
       </div>
-      <div id="page3" data-scroll data-scroll-speed="-1.5">
+      <div id="page3" data-scroll data-scroll-speed="-2.5">
         <h1>Our Projects</h1>
         <div class="underLine"></div>
         <div id="image-div-container">
@@ -224,10 +224,9 @@
           </div>
         </div>
       </div>
-      <div id="page4" data-scroll data-scroll-speed="-2">
+      <div id="page4" data-scroll data-scroll-speed="-2.5">
         <div id="page4-content">
           <h1>About Obys</h1>
-
           <div class="underLine"></div>
           <p>
             Our agency is about people who love creating, designing and
@@ -280,7 +279,7 @@
         </div>
       </div>
 
-      <div id="page5" data-scroll data-scroll-speed="-1.5">
+      <div id="page5" data-scroll data-scroll-speed="-2.5">
         <div class="elem">
           <h1><span> Sport </span>- Fashion - Technology -</h1>
           <h1><span> Sport </span>- Fashion - Technology -</h1>
@@ -302,7 +301,7 @@
           <h1><span> music </span>- hotels - automotive -</h1>
         </div>
       </div>
-      <div id="footer" data-scroll data-scroll-speed="-2.5">
+      <div id="footer" data-scroll data-scroll-speed="-.5">
         <div id="footer-text">
           <h1>Let's Create</h1>
           <h2>Let's Create</h2>
